# shop_inventory_etl

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: catalogs.csv  products.csv
etl/: app.py  db.py  etl_pipeline.py  logger.py
tests/: conftest.py  test_etl.py
